# Oh-My-ClaudeCode-CLI

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/agents/: executor.rs  mod.rs
src/cli/: args.rs  mod.rs
src/instructions/: advisor_system.txt  chore_system.txt  coder_system.txt  frontend_system.txt  global_prompt.md  looker_system.txt  mod.rs  researcher_system.txt  reviewer_system.txt  workflow.md
src/instructions/skills/: advisor.md  chore.md  looker.md  researcher.md  reviewer.md
src/types/: config.rs  error.rs  mod.rs  output.rs
